force-app/main/default/objects/Contact/fields/Advisory_Board_Role__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Board_Role__c</fullName>
    <description>Field created as part of &apos;Intapp Advisory Board Member Project&apos;; Requested as part of Ticket #16470</description>
    <inlineHelpText>Role of the contact on the Intapp Advisory Board</inlineHelpText>
    <label>Advisory Board Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CEO/MP Advisory Role</fullName>
            </value>
            <value>
                <fullName>CFO Advisory Role</fullName>
            </value>
            <value>
                <fullName>CIO Advisory Role</fullName>
            </value>
            <value>
                <fullName>CMO Advisory Role</fullName>
            </value>
            <value>
                <fullName>COO Advisory Role</fullName>
            </value>
            <value>
                <fullName>CPO Advisory Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>