force-app/main/default/objects/Contact/fields/bre__Company__c.field-meta.xml
<CustomField>
    <fullName>bre__Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>