force-app/main/default/objects/Contact/fields/Calendar_Week_Hours__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week_Hours__c</fullName>
    <formula>pse__Work_Calendar__r.pse__Week_Total_Hours__c</formula>
    <label>Calendar Week Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>