force-app/main/default/objects/Contact/fields/CCPA_compliance__c.field-meta.xml
<CustomField>
    <fullName>CCPA_compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCPA compliance</label>
    <type>Checkbox</type>
</CustomField>