force-app/main/default/objects/Contact/fields/Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contact_Stage__c</fullName>
    <description>CR#45758</description>
    <label>Contact Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Waiting for SDR Review</fullName>
            </value>
            <value>
                <fullName>SDR Accepted</fullName>
            </value>
            <value>
                <fullName>Sales Accepted​</fullName>
            </value>
            <value>
                <fullName>MD Engaged</fullName>
            </value>
            <value>
                <fullName>No Current Project</fullName>
            </value>
            <value>
                <fullName>No Contact Response</fullName>
            </value>
            <value>
                <fullName>Not in Target Market</fullName>
            </value>
            <value>
                <fullName>Invalid Contact</fullName>
            </value>
            <value>
                <fullName>SDR Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>