force-app/main/default/objects/Contact/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <formula>IF( TEXT(Reference_Tracking_Status__c) = &apos;Active&apos;, TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>