force-app/main/default/objects/Contact/fields/Date_Last_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Validated__c</fullName>
    <inlineHelpText>Please enter the Date when the contact was last validated.</inlineHelpText>
    <label>Date Last Validated</label>
    <type>Date</type>
</CustomField>