force-app/main/default/objects/Contact/fields/Date_Time_contact_info_was_verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_contact_info_was_verified__c</fullName>
    <description>Registers current Date and Time through a workflow rule when a user checks: &apos;Information validated&apos; checkbox</description>
    <label>Date &amp; Time contact info was verified</label>
    <type>DateTime</type>
</CustomField>