force-app/main/default/objects/Contact/fields/Delegate_Approval_End__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Approval_End__c</fullName>
    <label>Delegate Approval End</label>
    <type>Date</type>
</CustomField>