force-app/main/default/objects/Contact/fields/Delegate_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <value>00130000000XELb</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>