force-app/main/default/objects/Contact/fields/Detach_Contact_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Detach_Contact_from_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detach Contact from Account</label>
    <type>Checkbox</type>
</CustomField>