force-app/main/default/objects/Contact/fields/Detach_Contact_with_PCC_notification__c.field-meta.xml
<CustomField>
    <fullName>Detach_Contact_with_PCC_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detach Contact with PCC notification</label>
    <type>Checkbox</type>
</CustomField>