force-app/main/default/objects/Contact/fields/engagio__InPlay__c.field-meta.xml
<CustomField>
    <fullName>engagio__InPlay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently In Play</label>
    <type>Checkbox</type>
</CustomField>