force-app/main/default/objects/Contact/fields/Exclude_from_Time_Entry_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Time_Entry_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Time Entry Deadline</label>
    <type>Checkbox</type>
</CustomField>