force-app/main/default/objects/Contact/fields/External_Resource_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>External_Resource_Cost_Rate__c</fullName>
    <description>External Resource Cost Rate</description>
    <inlineHelpText>External Resource Cost Rate (should be blank for resources that do not have external flag checked).</inlineHelpText>
    <label>External Resource Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>