force-app/main/default/objects/Contact/fields/Flow_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Flow_Certification_Expiration__c</fullName>
    <description>Ticket 24296</description>
    <label>Flow Certification Expiration</label>
    <type>Date</type>
</CustomField>