force-app/main/default/objects/Contact/fields/Import_Contact__c.field-meta.xml
<CustomField>
    <fullName>Import_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import_Contact</label>
    <type>Checkbox</type>
</CustomField>