force-app/main/default/objects/Contact/fields/Influencer_Program__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Program__c</fullName>
    <label>Influencer Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Marketing/BD</fullName>
            </value>
            <value>
                <fullName>L&amp;P</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>