force-app/main/default/objects/Contact/fields/Intapp_Contact_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Contact_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intapp Contact/Mentor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts_Mentor</relationshipName>
    <type>Lookup</type>
</CustomField>