force-app/main/default/objects/Contact/fields/IntApp_Product_Role__c.field-meta.xml
<CustomField>
    <fullName>IntApp_Product_Role__c</fullName>
    <inlineHelpText>Technical Owner = Primary technical lead (e.g. CIO) 
Technical Resource = Technical administrator (e.g. DBA) 
Business Owner = Buyer of the solution (e.g. GC, CFO) 
Business User = End user (e.g. Records Clerk)</inlineHelpText>
    <label>Intapp Product Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WB: IT Owner</fullName>
            </value>
            <value>
                <fullName>WB: IT Administrator</fullName>
            </value>
            <value>
                <fullName>WB: Business Owner</fullName>
            </value>
            <value>
                <fullName>WB: Business User</fullName>
            </value>
            <value>
                <fullName>AT: IT Owner</fullName>
            </value>
            <value>
                <fullName>AT: IT Administrator</fullName>
            </value>
            <value>
                <fullName>AT: Business Owner</fullName>
            </value>
            <value>
                <fullName>AT: Business User</fullName>
            </value>
            <value>
                <fullName>TB: IT Owner</fullName>
            </value>
            <value>
                <fullName>TB: IT Administrator</fullName>
            </value>
            <value>
                <fullName>TB: Business Owner</fullName>
            </value>
            <value>
                <fullName>IB: IT Administrator</fullName>
            </value>
            <value>
                <fullName>IB: IT Owner</fullName>
            </value>
            <value>
                <fullName>DTE: IT Owner</fullName>
            </value>
            <value>
                <fullName>DTE: IT Administrator</fullName>
            </value>
            <value>
                <fullName>DTE: Business Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>