force-app/main/default/objects/Contact/fields/Integrate_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Integrate_Certification_Expiration__c</fullName>
    <label>Integrate Certification Expiration</label>
    <type>Date</type>
</CustomField>