force-app/main/default/objects/Contact/fields/Last_time_Used_as_a_Reference__c.field-meta.xml
<CustomField>
    <fullName>Last_time_Used_as_a_Reference__c</fullName>
    <label>Last time Used as a Reference</label>
    <summarizedField>Reference_Event__c.Reference_Event_Date__c</summarizedField>
    <summaryForeignKey>Reference_Event__c.Prospect_Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>