force-app/main/default/objects/Contact/fields/LawNet_Region__c.field-meta.xml
<CustomField>
    <fullName>LawNet_Region__c</fullName>
    <label>LawNet Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>---</fullName>
            </value>
            <value>
                <fullName>Four Corners</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Mid-America</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Northern California</fullName>
            </value>
            <value>
                <fullName>Northwest</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Southern California</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>