force-app/main/default/objects/Contact/fields/Mailer_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Mailer_Opt_Out__c</fullName>
    <label>Intapp Mailer Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Only</fullName>
            </value>
            <value>
                <fullName>Never Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>