force-app/main/default/objects/Contact/fields/MDRole__c.field-meta.xml
<CustomField>
    <fullName>MDRole__c</fullName>
    <label>MD Role Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
                <color>#78C953</color>
                <label>Met</label>
            </value>
            <value>
                <fullName>Phone/Email Met</fullName>
                <color>#0B24BE</color>
                <label>Phone/Email Met</label>
            </value>
            <value>
                <fullName>Actively Working</fullName>
                <color>#F3D904</color>
                <label>Actively Working</label>
            </value>
            <value>
                <fullName>Unmet</fullName>
                <color>#A53711</color>
                <default>true</default>
                <label>Unmet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>