force-app/main/default/objects/Contact/fields/OMP_Experience_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>OMP_Experience_Certification_Expiration__c</fullName>
    <label>OMP–Experience Certification Expiration</label>
    <type>Date</type>
</CustomField>