force-app/main/default/objects/Contact/fields/OMP_Relationships_Expertise__c.field-meta.xml
<CustomField>
    <fullName>OMP_Relationships_Expertise__c</fullName>
    <label>OMP–Relationships Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knowledgeable</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Accomplished</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>