force-app/main/default/objects/Contact/fields/Open_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Open_Certification_Expiration__c</fullName>
    <label>BA Certification Expiration</label>
    <type>Date</type>
</CustomField>