force-app/main/default/objects/Contact/fields/Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out__c</fullName>
    <label>Intapp Email Opt Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Marketing</fullName>
            </value>
            <value>
                <fullName>Time Marketing</fullName>
            </value>
            <value>
                <fullName>Risk Marketing</fullName>
            </value>
            <value>
                <fullName>Integration Marketing</fullName>
            </value>
            <value>
                <fullName>Risk Marketing - Webinars Only</fullName>
            </value>
            <value>
                <fullName>Time Marketing - Webinars Only</fullName>
            </value>
            <value>
                <fullName>Integration Marketing - Webinars Only</fullName>
            </value>
            <value>
                <fullName>NPS Survey</fullName>
            </value>
            <value>
                <fullName>CRM Communication</fullName>
            </value>
            <value>
                <fullName>Critical Alerts</fullName>
            </value>
            <value>
                <fullName>Insights - Open</fullName>
            </value>
            <value>
                <fullName>Insights - Time</fullName>
            </value>
            <value>
                <fullName>Insights - Walls</fullName>
            </value>
            <value>
                <fullName>Insights - Flow</fullName>
            </value>
            <value>
                <fullName>Telemarketer Opt Out</fullName>
            </value>
            <value>
                <fullName>Intapp University Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>