force-app/main/default/objects/Contact/fields/Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Partner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the partner user.</description>
    <label>Partner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001Q7xREAS</relationshipName>
    <type>Lookup</type>
</CustomField>