force-app/main/default/objects/Contact/fields/Previous_Firm__c.field-meta.xml
<CustomField>
    <fullName>Previous_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>