force-app/main/default/objects/Contact/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Engagement Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Technologist</fullName>
            </value>
            <value>
                <fullName>Principal Architect</fullName>
            </value>
            <value>
                <fullName>Principal Consultant</fullName>
            </value>
            <value>
                <fullName>Programme Manager</fullName>
            </value>
            <value>
                <fullName>PS Management</fullName>
            </value>
            <value>
                <fullName>QA Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Solution Engineer</fullName>
            </value>
            <value>
                <fullName>Services Product Engineer</fullName>
            </value>
            <value>
                <fullName>Solution Engineer</fullName>
            </value>
            <value>
                <fullName>Solution Engineer - After Hours</fullName>
            </value>
            <value>
                <fullName>Solutions Architect</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>